--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+
+  if user
+    p Welcome #{user.username}
+  else 
+    p You should Sign In first.
