--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,19 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN", crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js", integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body.p-0
-    div.container-fluid.p-0
+  body.p-0.m-0
+    div.container-fluid.p-0.min-vh-100.d-flex.flex-column
+      nav.navbar.bg-secondary.p-3
+        a.navbar-brand.fw-bold.text-light(href="/") Members Only 
+        if user
+          div.d-flex.align-items-center.gap-3
+            p= user.username
+            a(href="/login") Log-out
+        else
+          div.d-flex.align-items-center.gap-3
+            a(href="/sign-up")
+              button.btn.btn-warning Sign-up
+            a(href="/login")
+              button.btn.btn-primary Login
+
       block content
