--- a/views/membership-signup.pug
+++ b/views/membership-signup.pug
@@ -5,7 +5,7 @@ block content
     p.m-0.fs-3 Enter a secret passcode to become a member 
     p 
       em.text-muted (hint: he is the greatest footballer of all time!)
-    form.form-group.d-flex.flex-column.gap-3.align-items-center
+    form.form-group.d-flex.flex-column.gap-3.align-items-center(method="POST")
       input.form-control(type="text", name="secretPasscode", value=(secretValue ? secretValue : ""))
       button.btn.btn-warning(type="submit") Submit
     
