--- a/views/membership-signup.pug
+++ b/views/membership-signup.pug
@@ -6,8 +6,8 @@ block content
     p 
       em.text-muted (hint: he is the greatest footballer of all time!)
     form.form-group.d-flex.flex-column.gap-3.align-items-center(method="POST")
-      input.form-control(type="text", name="secretPasscode", value=(secretValue ? secretValue : ""))
+      input.form-control.mt-2(type="text", name="secretPasscode", value=(secretValue ? secretValue : ""))
+      if error
+        p.text-danger.fw-bold= error
       button.btn.btn-warning(type="submit") Submit
     
-    if error
-      p= error
