fig bug: when login unsuccessful to stop showing error page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html
         if user
           div.d-flex.align-items-center.justify-content-center.gap-3
             p= user.username
-            a(href="/login") Log-out
+            a(href="/logout") Log-out
         else
           div.d-flex.align-items-center.gap-3
             a(href="/sign-up")
