--- a/views/message-form.pug
+++ b/views/message-form.pug
@@ -8,10 +8,10 @@ block content
     form.d-flex.flex-column.gap-3.mb-3.w-50(method="POST")
       div.form-group
         label.mb-2(for="title") Title:
-        input.form-control(type="text", id="title", name="title" value=(message ? message.title : ""))
+        input.form-control(type="text", id="title", name="title", value=(message ? message.title : ""))
       div.form-group
         label.mb-2(for="text") Message:
-        textarea.form-control(type="text", id="text", name="text" value=(message ? message.text : ""))
+        textarea.form-control(type="text", id="text", name="text", value=(message ? message.text : ""))
 
       if errors 
         ul 
