--- a/views/membership-signup.pug
+++ b/views/membership-signup.pug
@@ -1,12 +1,12 @@
 extends layout
 
 block content 
-  div.d-flex.flex-column.align-items-center.justify-content-center.flex-fill
+  div.d-flex.flex-column.align-items-center.justify-content-center.flex-fill.bg-light
     p.m-0.fs-3 Enter a secret passcode to become a member 
     p 
       em.text-muted (hint: he is the greatest footballer of all time!)
     form.form-group.d-flex.flex-column.gap-3.align-items-center(method="POST")
-      input.form-control.mt-2(type="text", name="secretPasscode", value=(secretValue ? secretValue : ""))
+      input.form-control.mt-2(type="text", name="secretPasscode", value=(secretValue ? secretValue : "", active))
       if error
         p.text-danger.fw-bold= error
       button.btn.btn-warning(type="submit") Submit
