--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div.bg-light.d-flex.flex-column.align-items-center.justify-content-center
+  div.bg-light.d-flex.flex-column.align-items-center.justify-content-center.pt-2
     p.fs-3.mt-3 #[strong #{title}]  to
     h1.text-center.text-secondary.mb-4.fs-2 Members Only
 
