--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,18 +6,18 @@ html
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js", integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body.p-0.m-0
-    div.container-fluid.p-0.min-vh-100.d-flex.flex-column
-      nav.navbar.bg-secondary.p-3
+    div.container-fluid.vh-100.d-flex.flex-column.p-0.position-relative
+      nav.navbar.bg-secondary.py-2.px-3.w-100.position-sticky.top-0
         a.navbar-brand.fw-bold.text-light(href="/") Members Only 
         if user
           div.d-flex.align-items-center.justify-content-center.gap-3
-            p= user.username
-            a(href="/logout") Log-out
+            span.fw-bold.text-light= user.username
+            a.btn.btn-light.py-1.px-2(href="/logout") Log-out
         else
           div.d-flex.align-items-center.gap-3
             a(href="/sign-up")
-              button.btn.btn-warning Sign-up
+              button.btn.btn-warning.py-1.px-2 Sign-up
             a(href="/login")
-              button.btn.btn-primary Login
+              button.btn.btn-primary.py-1.px-2 Login
 
       block content
