--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -33,4 +33,4 @@ block content
       
       button.btn.btn-secondary(type="submit") Sign Up
    
-    p.text-center.mb-3 Have an account? #[a(href="/sign-in") Sign In]
+    p.text-center.mb-3 Have an account? #[a(href="/login") Login]
