--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,3 +24,5 @@ html
               button.btn.btn-primary.py-1.px-2 Login
 
       block content
+      footer.w-100.p-2.position-sticky.bottom-0.bg-body-secondary
+        p.text-center Copyright ©️ 2023 Gelo #[a(href="https://github.com/Bongani001" target="_blank") #[img.rounded-circle.github-logo(src="/images/github-logo.png")]]
