--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div.container-fluid.d-flex.flex-column.align-items-center.justify-content-center.bg-light
+  div.container-fluid.d-flex.flex-column.align-items-center.justify-content-center.bg-light.flex-grow-1
     if user
       div.align-self-start
         p.fs-4 Hi, #{user.username}
